update: Design UI/UX

--- a/app/src/main/res/drawable/custom_boder_red.xml
+++ b/app/src/main/res/drawable/custom_boder_red.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:topLeftRadius="0dp"
+        android:topRightRadius="0dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
+        />
+
+    <stroke android:width="5dp"
+        android:color="#650F0F"/>
+</shape>
