--- a/app/src/main/res/layout/activity_ble.xml
+++ b/app/src/main/res/layout/activity_ble.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_margin="1dp"
     android:orientation="vertical"
     tools:context=".BLEActivity">
 
@@ -12,31 +12,42 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
+        android:background="@drawable/custom_shadow_shape_listview"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/buttonBLEScan"
-            style="?android:attr/buttonBarButtonStyle"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:text="Scan" />
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:text="GLUCOMETRIC DEVICE"
+            android:textColor="@color/red"
+            android:textSize="18sp"
+            android:fontFamily="@font/arvo"/>
 
-        <Button
-            android:id="@+id/buttonBLEStop"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+        <ImageButton
+            android:id="@+id/buttonBLEScan"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="100dp"
             android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:text="Stop" />
+            android:background="@drawable/custom_button_scan_ble" />
+
+        <!--        <Button-->
+        <!--            android:id="@+id/buttonBLEStop"-->
+        <!--            style="?android:attr/buttonBarButtonStyle"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="5dp"-->
+        <!--            android:layout_marginEnd="10dp"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:text="Stop" />-->
 
 
     </LinearLayout>
@@ -45,39 +56,53 @@
         android:id="@+id/listview_ble_devices"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@id/selected_device_info"
+        android:layout_margin="5dp"
+        android:layout_marginTop="1dp"
+        android:background="#FFFFFF"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout_device_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
-    <Button
-        android:id="@+id/buttonBLEConnect"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout_device_info"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Connect"
-        app:layout_constraintBottom_toTopOf="@id/textviewBLEStatus"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <include
-        android:id="@+id/selected_device_info"
-        layout="@layout/ble_device_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/buttonBLEConnect"
-        app:layout_constraintEnd_toStartOf="@id/buttonBLEConnect"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textviewBLEStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label_ble_disconnected"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listview_ble_devices">
+
+        <Button
+            android:id="@+id/buttonBLEConnect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Connect to this device"
+            android:background="@drawable/custom_button_categories_4"/>
+        <include
+            android:id="@+id/selected_device_info"
+            layout="@layout/ble_device_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.026"
+            app:layout_constraintStart_toStartOf="parent" />
+
+<!--        <TextView-->
+<!--            android:id="@+id/textviewBLEStatus"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="16sp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:text="@string/label_ble_disconnected" />-->
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
