--- a/app/src/main/res/layout/bluetooth_searching_dialog.xml
+++ b/app/src/main/res/layout/bluetooth_searching_dialog.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/dialog_pv"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="bluetooth_searching.json"
+        app:lottie_loop="true"
+        app:lottie_url="bluetooth_searching.json"
+        app:lottie_rawRes="@raw/bluetooth_searching"
+        android:elevation="1dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
